updates to project

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,86 @@
     transform: rotate(360deg);
   }
 }
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #cfd9df;
+}
+.weather-app {
+  border: none;
+  display: block;
+  margin: 50px auto;
+  padding: 30px;
+  max-width: 600px;
+  border-radius: 20px;
+  background-color: white;
+  box-shadow: 2px 2px 2px #000;
+}
+.city {
+  width: 80%;
+  padding: 15px 0;
+  background-color: #cfd9df;
+  color: black;
+}
+.submit {
+  padding: 15px 20px;
+  background-color: #ff5d9e;
+  margin-left: 10px;
+  color: white;
+}
+.city,
+.submit {
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
+  margin-bottom: 50px;
+}
+strong {
+  color: #ff5d9e;
+}
+.weather {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+  border-top: 1px solid #cfd9df;
+}
+.temperature {
+  font-size: 80px;
+}
+.unit {
+  position: relative;
+  top: -40px;
+  font-size: 24px;
+}
+a {
+  text-decoration: none;
+  color: #ff5d9e;
+}
+
+.current-temperature {
+  display: inline-block;
+}
+img {
+  width: 80px;
+  position: relative;
+  margin-bottom: -10px;
+}
+footer {
+  border-top: 1px solid #cfd9df;
+  padding-top: 20px;
+}
+.weather-forecast {
+  margin: 20px 0 40px;
+  text-align: center;
+  color: #000;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 800;
+}
+.forecast-day,
+.min-temperature {
+  opacity: 0.7;
+  color: #ff5d9e;
+}
+.weather-temperature {
+  font-size: 12px;
+}
