--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  text-align: left;
+  margin: 100px auto;
+  max-width: 600px;
+  border: 2px solid black;
+  padding: 50px;
+  box-shadow: 2px 2px 2px #000;
+  font-family: "Roboto", sans-serif;
+  background-color: #cfd9df;
+  border-radius: 20px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -36,38 +39,29 @@
     transform: rotate(360deg);
   }
 }
-body {
-  font-family: "Roboto", sans-serif;
-  background-color: #cfd9df;
+h1 {
+  margin: 40px 0 0 0;
 }
-.weather-app {
-  border: none;
-  display: block;
-  margin: 50px auto;
-  padding: 30px;
-  max-width: 600px;
-  border-radius: 20px;
-  background-color: white;
-  box-shadow: 2px 2px 2px #000;
-}
-.city {
-  width: 80%;
-  padding: 15px 0;
+
+input {
+  padding: 15px;
   background-color: #cfd9df;
   color: black;
-}
-.submit {
-  padding: 15px 20px;
-  background-color: #ff5d9e;
-  margin-left: 10px;
-  color: white;
-}
-.city,
-.submit {
-  border: none;
+  display: inline-flex;
+  margin-right: 20px;
   border-radius: 10px;
   font-size: 20px;
-  margin-bottom: 50px;
+  border: 1px solid #ff5d9e;
+}
+.cityName {
+  width: 65%;
+}
+.details {
+  margin: 0;
+  padding: 0;
+}
+hr {
+  margin-top: 50px;
 }
 strong {
   color: #ff5d9e;
