--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,25 @@
+:root {
+  --primary-color: #000;
+  --secondary-color: #e72929;
+  --tertiary-color: #d8e9f0;
+}
 .App {
   text-align: left;
   margin: 100px auto;
   max-width: 600px;
-  border: 2px solid black;
+  border: 1px solid var(--tertiary-color);
   padding: 50px;
-  box-shadow: 2px 2px 2px #000;
+  box-shadow: 2px 2px 2px var(--tertiary-color);
   font-family: "Roboto", sans-serif;
-  background-color: #cfd9df;
   border-radius: 20px;
+
+  background-color: var(--tertiary-color);
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -45,26 +36,34 @@ h1 {
 
 input {
   padding: 15px;
-  background-color: #cfd9df;
-  color: black;
   display: inline-flex;
   margin-right: 20px;
   border-radius: 10px;
   font-size: 20px;
-  border: 1px solid #ff5d9e;
+
+  background-color: var(--secondary-color);
+  border: 1px solid var(--tertiary-color);
 }
 .cityName {
-  width: 65%;
+  width: 66%;
+  color: var(--primary-color);
 }
 .details {
   margin: 0;
   padding: 0;
 }
+.city-ico-temp {
+  display: flex;
+  justify-content: space-between;
+}
 hr {
   margin-top: 50px;
 }
 strong {
-  color: #ff5d9e;
+  color: var(--secondary-color);
+}
+.your-city {
+  font-size: 48px;
 }
 .weather {
   display: flex;
@@ -82,34 +81,14 @@ strong {
 }
 a {
   text-decoration: none;
-  color: #ff5d9e;
+  color: var(--secondary-color);
 }
 
-.current-temperature {
-  display: inline-block;
-}
 img {
   width: 80px;
   position: relative;
   margin-bottom: -10px;
 }
 footer {
-  border-top: 1px solid #cfd9df;
   padding-top: 20px;
-}
-.weather-forecast {
-  margin: 20px 0 40px;
-  text-align: center;
-  color: #000;
-  display: flex;
-  justify-content: space-between;
-  font-weight: 800;
-}
-.forecast-day,
-.min-temperature {
-  opacity: 0.7;
-  color: #ff5d9e;
-}
-.weather-temperature {
-  font-size: 12px;
 }
